tests/extensions/structs/semanticErr/repeatedField.wacc
begin
    struct sa is
        int s
        int s
    end
    skip
end